// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`analyzeGaps: determinism and purity > matches the committed snapshot (demo) 1`] = `
[
  {
    "aiPolicy": {
      "confidence": "HIGH",
      "mode": "feedback_ok",
      "requirementId": "uc-berkeley-data-science-ba#ai_policy",
      "sourceUrl": "https://apply.universityofcalifornia.edu/docs/StatementOfIntegrity.pdf",
    },
    "allDeadlines": [
      {
        "confidence": "HIGH",
        "date": "2026-10-01",
        "daysUntil": 18,
        "deadlineId": "fall-2027-filing_open-2026-10-01",
        "requirementId": "uc-berkeley-data-science-ba#deadline:fall-2027-filing_open-2026-10-01",
        "sourceUrl": "https://admission.universityofcalifornia.edu/how-to-apply/applying-as-a-transfer/dates-and-deadlines.html",
        "term": "Fall 2027",
        "type": "filing_open",
      },
      {
        "confidence": "HIGH",
        "date": "2026-11-30",
        "daysUntil": 78,
        "deadlineId": "fall-2027-application-2026-11-30",
        "requirementId": "uc-berkeley-data-science-ba#deadline:fall-2027-application-2026-11-30",
        "sourceUrl": "https://admission.universityofcalifornia.edu/how-to-apply/applying-as-a-transfer/dates-and-deadlines.html",
        "term": "Fall 2027",
        "type": "application",
      },
      {
        "confidence": "HIGH",
        "date": "2027-01-31",
        "daysUntil": 140,
        "deadlineId": "fall-2027-docs-2027-01-31",
        "requirementId": "uc-berkeley-data-science-ba#deadline:fall-2027-docs-2027-01-31",
        "sourceUrl": "https://admission.universityofcalifornia.edu/how-to-apply/applying-as-a-transfer/dates-and-deadlines.html",
        "term": "Fall 2027",
        "type": "docs",
      },
      {
        "confidence": "HIGH",
        "date": "2027-07-01",
        "daysUntil": 291,
        "deadlineId": "fall-2027-docs-2027-07-01",
        "requirementId": "uc-berkeley-data-science-ba#deadline:fall-2027-docs-2027-07-01",
        "sourceUrl": "https://admission.universityofcalifornia.edu/how-to-apply/applying-as-a-transfer/dates-and-deadlines.html",
        "term": "Fall 2027",
        "type": "docs",
      },
    ],
    "asOf": "2026-09-13",
    "deadline": {
      "confidence": "HIGH",
      "date": "2026-11-30",
      "daysUntil": 78,
      "deadlineId": "fall-2027-application-2026-11-30",
      "requirementId": "uc-berkeley-data-science-ba#deadline:fall-2027-application-2026-11-30",
      "sourceUrl": "https://admission.universityofcalifornia.edu/how-to-apply/applying-as-a-transfer/dates-and-deadlines.html",
      "status": "upcoming",
      "term": "Fall 2027",
      "termMatched": true,
      "type": "application",
    },
    "essays": {
      "optional": [
        {
          "charLimit": null,
          "confidence": "MEDIUM",
          "essayId": "uc-piq-1-leadership",
          "prompt": "Describe an example of your leadership experience in which you have positively influenced others, helped resolve disputes, or contributed to group efforts over time.",
          "promptPublished": true,
          "required": false,
          "requirementId": "uc-berkeley-data-science-ba#essay:uc-piq-1-leadership",
          "sourceUrl": "https://admission.universityofcalifornia.edu/how-to-apply/applying-as-a-transfer/personal-insight-questions.html",
          "wordLimit": 350,
        },
        {
          "charLimit": null,
          "confidence": "MEDIUM",
          "essayId": "uc-piq-2-creative",
          "prompt": "Every person has a creative side, and it can be expressed in many ways: problem solving, original and innovative thinking, and artistically, to name a few. Describe how you express your creative side.",
          "promptPublished": true,
          "required": false,
          "requirementId": "uc-berkeley-data-science-ba#essay:uc-piq-2-creative",
          "sourceUrl": "https://admission.universityofcalifornia.edu/how-to-apply/applying-as-a-transfer/personal-insight-questions.html",
          "wordLimit": 350,
        },
        {
          "charLimit": null,
          "confidence": "MEDIUM",
          "essayId": "uc-piq-3-talent",
          "prompt": "What would you say is your greatest talent or skill? How have you developed and demonstrated that talent over time?",
          "promptPublished": true,
          "required": false,
          "requirementId": "uc-berkeley-data-science-ba#essay:uc-piq-3-talent",
          "sourceUrl": "https://admission.universityofcalifornia.edu/how-to-apply/applying-as-a-transfer/personal-insight-questions.html",
          "wordLimit": 350,
        },
        {
          "charLimit": null,
          "confidence": "MEDIUM",
          "essayId": "uc-piq-4-educational",
          "prompt": "Describe how you have taken advantage of a significant educational opportunity or worked to overcome an educational barrier you have faced.",
          "promptPublished": true,
          "required": false,
          "requirementId": "uc-berkeley-data-science-ba#essay:uc-piq-4-educational",
          "sourceUrl": "https://admission.universityofcalifornia.edu/how-to-apply/applying-as-a-transfer/personal-insight-questions.html",
          "wordLimit": 350,
        },
        {
          "charLimit": null,
          "confidence": "MEDIUM",
          "essayId": "uc-piq-5-challenge",
          "prompt": "Describe the most significant challenge you have faced and the steps you have taken to overcome this challenge. How has this challenge affected your academic achievement?",
          "promptPublished": true,
          "required": false,
          "requirementId": "uc-berkeley-data-science-ba#essay:uc-piq-5-challenge",
          "sourceUrl": "https://admission.universityofcalifornia.edu/how-to-apply/applying-as-a-transfer/personal-insight-questions.html",
          "wordLimit": 350,
        },
        {
          "charLimit": null,
          "confidence": "MEDIUM",
          "essayId": "uc-piq-6-community",
          "prompt": "What have you done to make your school or your community a better place?",
          "promptPublished": true,
          "required": false,
          "requirementId": "uc-berkeley-data-science-ba#essay:uc-piq-6-community",
          "sourceUrl": "https://admission.universityofcalifornia.edu/how-to-apply/applying-as-a-transfer/personal-insight-questions.html",
          "wordLimit": 350,
        },
        {
          "charLimit": null,
          "confidence": "MEDIUM",
          "essayId": "uc-piq-7-beyond",
          "prompt": "Beyond what has already been shared in your application, what do you believe makes you a strong candidate for admissions to the University of California?",
          "promptPublished": true,
          "required": false,
          "requirementId": "uc-berkeley-data-science-ba#essay:uc-piq-7-beyond",
          "sourceUrl": "https://admission.universityofcalifornia.edu/how-to-apply/applying-as-a-transfer/personal-insight-questions.html",
          "wordLimit": 350,
        },
      ],
      "optionalCount": 7,
      "required": [
        {
          "charLimit": null,
          "confidence": "MEDIUM",
          "essayId": "uc-piq-required",
          "prompt": "Please describe how you have prepared for your intended major, including your readiness to succeed in your upper-division courses once you enroll at the university.",
          "promptPublished": true,
          "required": true,
          "requirementId": "uc-berkeley-data-science-ba#essay:uc-piq-required",
          "sourceUrl": "https://admission.universityofcalifornia.edu/how-to-apply/applying-as-a-transfer/personal-insight-questions.html",
          "wordLimit": 350,
        },
      ],
      "requiredCount": 1,
    },
    "gePattern": {
      "confidence": "HIGH",
      "requirementId": "uc-berkeley-data-science-ba#ge_pattern",
      "sourceUrl": "https://admission.universityofcalifornia.edu/admission-requirements/transfer-requirements/preparing-to-transfer/basic-requirements.html",
      "text": "UC 7-course pattern required for eligibility. Completing IGETC, Cal-GETC, or campus-specific GE may already satisfy it. Berkeley also lists a Reading & Composition requirement.",
    },
    "gpa": {
      "competitive": {
        "confidence": "MEDIUM",
        "published": false,
        "requirementId": "uc-berkeley-data-science-ba#competitive_gpa",
        "sourceUrl": "https://transfers.berkeley.edu/prospective-students/general-admission-information",
        "value": null,
      },
      "min": {
        "confidence": "HIGH",
        "published": true,
        "requirementId": "uc-berkeley-data-science-ba#min_gpa",
        "sourceUrl": "https://transfers.berkeley.edu/prospective-students/general-admission-information",
        "value": 3,
      },
      "status": "meets_minimum",
      "student": 3.3,
    },
    "hasTransferProgram": {
      "confidence": "MEDIUM",
      "requirementId": "uc-berkeley-data-science-ba#has_transfer_program",
      "sourceUrl": "https://admission.universityofcalifornia.edu/how-to-apply/applying-as-a-transfer/dates-and-deadlines.html",
      "value": true,
    },
    "isFictional": false,
    "prereqs": [
      {
        "confidence": "MEDIUM",
        "courseId": "calc-1",
        "matchedCourses": [
          "MATH 192",
        ],
        "name": "Calculus I",
        "pendingCompletion": false,
        "plannedCourses": [],
        "possibleEquivalents": [],
        "requirementId": "uc-berkeley-data-science-ba#course:calc-1",
        "sourceUrl": "https://cdss.berkeley.edu/dsus/academics/requirements-lower-division",
        "status": "met",
      },
      {
        "confidence": "MEDIUM",
        "courseId": "calc-2",
        "matchedCourses": [
          "MATH 193",
        ],
        "name": "Calculus II",
        "pendingCompletion": true,
        "plannedCourses": [],
        "possibleEquivalents": [],
        "requirementId": "uc-berkeley-data-science-ba#course:calc-2",
        "sourceUrl": "https://cdss.berkeley.edu/dsus/academics/requirements-lower-division",
        "status": "met",
      },
      {
        "confidence": "MEDIUM",
        "courseId": "data-c8",
        "matchedCourses": [],
        "name": "Foundations of Data Science (Data C8)",
        "pendingCompletion": false,
        "plannedCourses": [],
        "possibleEquivalents": [
          "MATH 142",
        ],
        "requirementId": "uc-berkeley-data-science-ba#course:data-c8",
        "sourceUrl": "https://cdss.berkeley.edu/dsus/academics/requirements-lower-division",
        "status": "unknown-equivalency",
      },
      {
        "confidence": "MEDIUM",
        "courseId": "intro-programming",
        "matchedCourses": [
          "COMSC 110",
        ],
        "name": "Programming: CS 61A or CS/Data C88C, or Engin 7",
        "pendingCompletion": false,
        "plannedCourses": [],
        "possibleEquivalents": [],
        "requirementId": "uc-berkeley-data-science-ba#course:intro-programming",
        "sourceUrl": "https://cdss.berkeley.edu/dsus/academics/requirements-lower-division",
        "status": "met",
      },
      {
        "confidence": "MEDIUM",
        "courseId": "linear-algebra",
        "matchedCourses": [],
        "name": "Linear Algebra (Math 54 or equivalent)",
        "pendingCompletion": false,
        "plannedCourses": [],
        "possibleEquivalents": [],
        "requirementId": "uc-berkeley-data-science-ba#course:linear-algebra",
        "sourceUrl": "https://cdss.berkeley.edu/dsus/academics/requirements-lower-division",
        "status": "missing",
      },
      {
        "confidence": "MEDIUM",
        "courseId": "data-structures",
        "matchedCourses": [],
        "name": "Data Structures (CS 61B or 61BL)",
        "pendingCompletion": false,
        "plannedCourses": [],
        "possibleEquivalents": [],
        "requirementId": "uc-berkeley-data-science-ba#course:data-structures",
        "sourceUrl": "https://cdss.berkeley.edu/dsus/academics/requirements-lower-division",
        "status": "missing",
      },
      {
        "confidence": "MEDIUM",
        "courseId": "domain-emphasis",
        "matchedCourses": [],
        "name": "Domain Emphasis lower-division course",
        "pendingCompletion": false,
        "plannedCourses": [],
        "possibleEquivalents": [],
        "requirementId": "uc-berkeley-data-science-ba#course:domain-emphasis",
        "sourceUrl": "https://cdss.berkeley.edu/dsus/academics/requirements-lower-division",
        "status": "missing",
      },
      {
        "confidence": "MEDIUM",
        "courseId": "uc-7-course-pattern",
        "matchedCourses": [],
        "name": "UC 7-course pattern",
        "pendingCompletion": false,
        "plannedCourses": [],
        "possibleEquivalents": [],
        "requirementId": "uc-berkeley-data-science-ba#course:uc-7-course-pattern",
        "sourceUrl": "https://cdss.berkeley.edu/dsus/academics/requirements-lower-division",
        "status": "missing",
      },
    ],
    "profileId": "demo",
    "programId": "uc-berkeley-data-science-ba",
    "programName": "Data Science BA (College of Computing, Data Science, and Society)",
    "recs": {
      "confidence": "MEDIUM",
      "required": 0,
      "requirementId": "uc-berkeley-data-science-ba#recs_required",
      "sourceUrl": "https://admission.universityofcalifornia.edu/admission-requirements/transfer-requirements/preparing-to-transfer/basic-requirements.html",
    },
    "schoolId": "uc-berkeley",
    "schoolName": "University of California, Berkeley",
    "summary": {
      "blockers": 0,
      "info": 0,
      "met": 3,
      "missing": 4,
      "unknownEquivalency": 1,
      "warnings": 0,
    },
    "targetTerm": "Fall 2027",
    "units": {
      "completedInRequiredSystem": 45,
      "confidence": "HIGH",
      "converted": false,
      "projectedInRequiredSystem": 60,
      "requiredMin": 60,
      "requiredSystem": "semester",
      "requirementId": "uc-berkeley-data-science-ba#units",
      "shortfall": 0,
      "sourceUrl": "https://transfers.berkeley.edu/prospective-students/general-admission-information",
      "status": "met_with_in_progress",
      "studentCompleted": 45,
      "studentInProgress": 15,
      "studentSystem": "semester",
    },
    "warnings": [],
  },
  {
    "aiPolicy": {
      "confidence": "HIGH",
      "mode": "grammar_only",
      "requirementId": "cornell-as-economics#ai_policy",
      "sourceUrl": "https://admissions.cornell.edu/policies/receiving-help-with-your-application",
    },
    "allDeadlines": [
      {
        "confidence": "HIGH",
        "date": "2027-03-15",
        "daysUntil": 183,
        "deadlineId": "fall-2027-application-2027-03-15",
        "requirementId": "cornell-as-economics#deadline:fall-2027-application-2027-03-15",
        "sourceUrl": "https://admissions.cornell.edu/how-to-apply/transfer-applicants",
        "term": "Fall 2027",
        "type": "application",
      },
      {
        "confidence": "HIGH",
        "date": "2027-04-15",
        "daysUntil": 214,
        "deadlineId": "fall-2027-docs-2027-04-15",
        "requirementId": "cornell-as-economics#deadline:fall-2027-docs-2027-04-15",
        "sourceUrl": "https://admissions.cornell.edu/how-to-apply/transfer-applicants",
        "term": "Fall 2027",
        "type": "docs",
      },
    ],
    "asOf": "2026-09-13",
    "deadline": {
      "confidence": "HIGH",
      "date": "2027-03-15",
      "daysUntil": 183,
      "deadlineId": "fall-2027-application-2027-03-15",
      "requirementId": "cornell-as-economics#deadline:fall-2027-application-2027-03-15",
      "sourceUrl": "https://admissions.cornell.edu/how-to-apply/transfer-applicants",
      "status": "upcoming",
      "term": "Fall 2027",
      "termMatched": true,
      "type": "application",
    },
    "essays": {
      "optional": [],
      "optionalCount": 0,
      "required": [
        {
          "charLimit": null,
          "confidence": "HIGH",
          "essayId": "cornell-transfer-statement",
          "prompt": "How does continuing your education at a new institution help you achieve your future goals?",
          "promptPublished": true,
          "required": true,
          "requirementId": "cornell-as-economics#essay:cornell-transfer-statement",
          "sourceUrl": "https://admissions.cornell.edu/how-to-apply/transfer-applicants",
          "wordLimit": 650,
        },
        {
          "charLimit": null,
          "confidence": "LOW",
          "essayId": "as-college-supplement",
          "prompt": null,
          "promptPublished": false,
          "required": true,
          "requirementId": "cornell-as-economics#essay:as-college-supplement",
          "sourceUrl": "https://admissions.cornell.edu/how-to-apply/transfer-applicants",
          "wordLimit": null,
        },
      ],
      "requiredCount": 2,
    },
    "gePattern": {
      "confidence": "MEDIUM",
      "requirementId": "cornell-as-economics#ge_pattern",
      "sourceUrl": "https://economics.cornell.edu/major",
      "text": null,
    },
    "gpa": {
      "competitive": {
        "confidence": "MEDIUM",
        "published": true,
        "requirementId": "cornell-as-economics#competitive_gpa",
        "sourceUrl": "https://as.cornell.edu/admissions/admissions-requirements-and-process",
        "value": 3.5,
      },
      "min": {
        "confidence": "MEDIUM",
        "published": false,
        "requirementId": "cornell-as-economics#min_gpa",
        "sourceUrl": "https://as.cornell.edu/admissions/admissions-requirements-and-process",
        "value": null,
      },
      "status": "below_competitive",
      "student": 3.3,
    },
    "hasTransferProgram": {
      "confidence": "MEDIUM",
      "requirementId": "cornell-as-economics#has_transfer_program",
      "sourceUrl": "https://admissions.cornell.edu/how-to-apply/transfer-applicants",
      "value": true,
    },
    "isFictional": false,
    "prereqs": [
      {
        "confidence": "HIGH",
        "courseId": "econ-1110",
        "matchedCourses": [
          "ECON 220",
        ],
        "name": "Introductory Microeconomics (ECON 1110 or equivalent)",
        "pendingCompletion": false,
        "plannedCourses": [],
        "possibleEquivalents": [],
        "requirementId": "cornell-as-economics#course:econ-1110",
        "sourceUrl": "https://economics.cornell.edu/major",
        "status": "met",
      },
      {
        "confidence": "HIGH",
        "courseId": "econ-1120",
        "matchedCourses": [],
        "name": "Introductory Macroeconomics (ECON 1120 or equivalent)",
        "pendingCompletion": false,
        "plannedCourses": [],
        "possibleEquivalents": [],
        "requirementId": "cornell-as-economics#course:econ-1120",
        "sourceUrl": "https://economics.cornell.edu/major",
        "status": "missing",
      },
      {
        "confidence": "HIGH",
        "courseId": "math-1110",
        "matchedCourses": [
          "MATH 192",
        ],
        "name": "Calculus I (MATH 1110 or equivalent)",
        "pendingCompletion": false,
        "plannedCourses": [],
        "possibleEquivalents": [],
        "requirementId": "cornell-as-economics#course:math-1110",
        "sourceUrl": "https://economics.cornell.edu/major",
        "status": "met",
      },
      {
        "confidence": "HIGH",
        "courseId": "as-writing-intensive",
        "matchedCourses": [],
        "name": "Writing-intensive composition course",
        "pendingCompletion": false,
        "plannedCourses": [],
        "possibleEquivalents": [
          "ENGL 122",
        ],
        "requirementId": "cornell-as-economics#course:as-writing-intensive",
        "sourceUrl": "https://economics.cornell.edu/major",
        "status": "unknown-equivalency",
      },
    ],
    "profileId": "demo",
    "programId": "cornell-as-economics",
    "programName": "College of Arts & Sciences - Economics",
    "recs": {
      "confidence": "HIGH",
      "required": 1,
      "requirementId": "cornell-as-economics#recs_required",
      "sourceUrl": "https://admissions.cornell.edu/how-to-apply/transfer-applicants",
    },
    "schoolId": "cornell",
    "schoolName": "Cornell University",
    "summary": {
      "blockers": 0,
      "info": 0,
      "met": 2,
      "missing": 1,
      "unknownEquivalency": 1,
      "warnings": 0,
    },
    "targetTerm": "Fall 2027",
    "units": {
      "completedInRequiredSystem": 45,
      "confidence": "HIGH",
      "converted": false,
      "projectedInRequiredSystem": 60,
      "requiredMin": 12,
      "requiredSystem": "semester",
      "requirementId": "cornell-as-economics#units",
      "shortfall": 0,
      "sourceUrl": "https://admissions.cornell.edu/how-to-apply/transfer-applicants",
      "status": "met",
      "studentCompleted": 45,
      "studentInProgress": 15,
      "studentSystem": "semester",
    },
    "warnings": [],
  },
  {
    "aiPolicy": {
      "confidence": "HIGH",
      "mode": "brainstorm_ok",
      "requirementId": "umich-lsa#ai_policy",
      "sourceUrl": "https://admissions.umich.edu/apply/transfer-applicants/essay-questions",
    },
    "allDeadlines": [
      {
        "confidence": "HIGH",
        "date": "2026-10-01",
        "daysUntil": 18,
        "deadlineId": "winter-2027-application-2026-10-01",
        "requirementId": "umich-lsa#deadline:winter-2027-application-2026-10-01",
        "sourceUrl": "https://lsa.umich.edu/transfer/prospective-students/apply.html",
        "term": "Winter 2027",
        "type": "application",
      },
      {
        "confidence": "HIGH",
        "date": "2027-02-01",
        "daysUntil": 141,
        "deadlineId": "fall-2027-application-2027-02-01",
        "requirementId": "umich-lsa#deadline:fall-2027-application-2027-02-01",
        "sourceUrl": "https://lsa.umich.edu/transfer/prospective-students/apply.html",
        "term": "Fall 2027",
        "type": "application",
      },
    ],
    "asOf": "2026-09-13",
    "deadline": {
      "confidence": "HIGH",
      "date": "2027-02-01",
      "daysUntil": 141,
      "deadlineId": "fall-2027-application-2027-02-01",
      "requirementId": "umich-lsa#deadline:fall-2027-application-2027-02-01",
      "sourceUrl": "https://lsa.umich.edu/transfer/prospective-students/apply.html",
      "status": "upcoming",
      "term": "Fall 2027",
      "termMatched": true,
      "type": "application",
    },
    "essays": {
      "optional": [
        {
          "charLimit": null,
          "confidence": "MEDIUM",
          "essayId": "commonapp-challenges",
          "prompt": "Common App challenges and circumstances question (optional).",
          "promptPublished": true,
          "required": false,
          "requirementId": "umich-lsa#essay:commonapp-challenges",
          "sourceUrl": "https://admissions.umich.edu/apply/transfer-applicants/essay-questions",
          "wordLimit": 250,
        },
      ],
      "optionalCount": 1,
      "required": [
        {
          "charLimit": null,
          "confidence": "MEDIUM",
          "essayId": "commonapp-personal-essay",
          "prompt": "Common App personal essay (choose one Common App prompt).",
          "promptPublished": true,
          "required": true,
          "requirementId": "umich-lsa#essay:commonapp-personal-essay",
          "sourceUrl": "https://admissions.umich.edu/apply/transfer-applicants/essay-questions",
          "wordLimit": 650,
        },
        {
          "charLimit": 1500,
          "confidence": "MEDIUM",
          "essayId": "um-leaders-citizens",
          "prompt": "At the University of Michigan, we are focused on developing leaders and citizens who will challenge the present and enrich the future. In your essay, share with us how you are prepared to contribute to these goals. This could include the people, places, experiences, or aspirations that have shaped your journey and future plans. (1,500 characters maximum.)",
          "promptPublished": true,
          "required": true,
          "requirementId": "umich-lsa#essay:um-leaders-citizens",
          "sourceUrl": "https://admissions.umich.edu/apply/transfer-applicants/essay-questions",
          "wordLimit": null,
        },
        {
          "charLimit": 2750,
          "confidence": "MEDIUM",
          "essayId": "um-college-fit",
          "prompt": "Describe the unique qualities that attract you to the specific undergraduate college or school (including preferred admission and dual degree programs) to which you are applying at the University of Michigan. How would that curriculum support your interests? (2,750 characters maximum.)",
          "promptPublished": true,
          "required": true,
          "requirementId": "umich-lsa#essay:um-college-fit",
          "sourceUrl": "https://admissions.umich.edu/apply/transfer-applicants/essay-questions",
          "wordLimit": null,
        },
        {
          "charLimit": 1500,
          "confidence": "MEDIUM",
          "essayId": "um-transfer-reasons",
          "prompt": "Please provide a statement that addresses your reasons for transferring and the objectives you hope to achieve. (1,500 characters maximum.)",
          "promptPublished": true,
          "required": true,
          "requirementId": "umich-lsa#essay:um-transfer-reasons",
          "sourceUrl": "https://admissions.umich.edu/apply/transfer-applicants/essay-questions",
          "wordLimit": null,
        },
      ],
      "requiredCount": 4,
    },
    "gePattern": {
      "confidence": "MEDIUM",
      "requirementId": "umich-lsa#ge_pattern",
      "sourceUrl": "https://admissions.umich.edu/apply/transfer-applicants/requirements-deadlines",
      "text": null,
    },
    "gpa": {
      "competitive": {
        "confidence": "MEDIUM",
        "published": false,
        "requirementId": "umich-lsa#competitive_gpa",
        "sourceUrl": "https://admissions.umich.edu/apply/transfer-applicants/requirements-deadlines",
        "value": null,
      },
      "min": {
        "confidence": "HIGH",
        "published": false,
        "requirementId": "umich-lsa#min_gpa",
        "sourceUrl": "https://admissions.umich.edu/apply/transfer-applicants/requirements-deadlines",
        "value": null,
      },
      "status": "not_published",
      "student": 3.3,
    },
    "hasTransferProgram": {
      "confidence": "MEDIUM",
      "requirementId": "umich-lsa#has_transfer_program",
      "sourceUrl": "https://lsa.umich.edu/transfer/prospective-students/apply.html",
      "value": true,
    },
    "isFictional": false,
    "prereqs": [],
    "profileId": "demo",
    "programId": "umich-lsa",
    "programName": "College of Literature, Science, and the Arts (LSA)",
    "recs": {
      "confidence": "HIGH",
      "required": 0,
      "requirementId": "umich-lsa#recs_required",
      "sourceUrl": "https://lsa.umich.edu/transfer/prospective-students/apply.html",
    },
    "schoolId": "umich",
    "schoolName": "University of Michigan - Ann Arbor",
    "summary": {
      "blockers": 0,
      "info": 0,
      "met": 0,
      "missing": 0,
      "unknownEquivalency": 0,
      "warnings": 0,
    },
    "targetTerm": "Fall 2027",
    "units": {
      "completedInRequiredSystem": 45,
      "confidence": "HIGH",
      "converted": false,
      "projectedInRequiredSystem": 60,
      "requiredMin": null,
      "requiredSystem": "semester",
      "requirementId": "umich-lsa#units",
      "shortfall": null,
      "sourceUrl": "https://admissions.umich.edu/apply/transfer-applicants/requirements-deadlines",
      "status": "not_published",
      "studentCompleted": 45,
      "studentInProgress": 15,
      "studentSystem": "semester",
    },
    "warnings": [],
  },
  {
    "aiPolicy": {
      "confidence": "LOW",
      "mode": "unknown",
      "requirementId": "northfield-fictional-cs#ai_policy",
      "sourceUrl": "about:fictional",
    },
    "allDeadlines": [],
    "asOf": "2026-09-13",
    "deadline": null,
    "essays": {
      "optional": [],
      "optionalCount": 0,
      "required": [],
      "requiredCount": 0,
    },
    "gePattern": {
      "confidence": "LOW",
      "requirementId": "northfield-fictional-cs#ge_pattern",
      "sourceUrl": "about:fictional",
      "text": null,
    },
    "gpa": {
      "competitive": {
        "confidence": "LOW",
        "published": false,
        "requirementId": "northfield-fictional-cs#competitive_gpa",
        "sourceUrl": "about:fictional",
        "value": null,
      },
      "min": {
        "confidence": "LOW",
        "published": false,
        "requirementId": "northfield-fictional-cs#min_gpa",
        "sourceUrl": "about:fictional",
        "value": null,
      },
      "status": "not_published",
      "student": 3.3,
    },
    "hasTransferProgram": {
      "confidence": "LOW",
      "requirementId": "northfield-fictional-cs#has_transfer_program",
      "sourceUrl": "about:fictional",
      "value": false,
    },
    "isFictional": true,
    "prereqs": [],
    "profileId": "demo",
    "programId": "northfield-fictional-cs",
    "programName": "Computer Science (FICTIONAL)",
    "recs": {
      "confidence": "LOW",
      "required": 0,
      "requirementId": "northfield-fictional-cs#recs_required",
      "sourceUrl": "about:fictional",
    },
    "schoolId": "northfield-fictional",
    "schoolName": "Northfield Institute of Technology (FICTIONAL)",
    "summary": {
      "blockers": 0,
      "info": 0,
      "met": 0,
      "missing": 0,
      "unknownEquivalency": 0,
      "warnings": 0,
    },
    "targetTerm": "Fall 2027",
    "units": {
      "completedInRequiredSystem": 45,
      "confidence": "LOW",
      "converted": false,
      "projectedInRequiredSystem": 60,
      "requiredMin": null,
      "requiredSystem": "semester",
      "requirementId": "northfield-fictional-cs#units",
      "shortfall": null,
      "sourceUrl": "about:fictional",
      "status": "not_published",
      "studentCompleted": 45,
      "studentInProgress": 15,
      "studentSystem": "semester",
    },
    "warnings": [],
  },
]
`;

exports[`analyzeGaps: determinism and purity > matches the committed snapshot (demo-quarter) 1`] = `
[
  {
    "aiPolicy": {
      "confidence": "HIGH",
      "mode": "feedback_ok",
      "requirementId": "uc-berkeley-data-science-ba#ai_policy",
      "sourceUrl": "https://apply.universityofcalifornia.edu/docs/StatementOfIntegrity.pdf",
    },
    "allDeadlines": [
      {
        "confidence": "HIGH",
        "date": "2026-10-01",
        "daysUntil": 18,
        "deadlineId": "fall-2027-filing_open-2026-10-01",
        "requirementId": "uc-berkeley-data-science-ba#deadline:fall-2027-filing_open-2026-10-01",
        "sourceUrl": "https://admission.universityofcalifornia.edu/how-to-apply/applying-as-a-transfer/dates-and-deadlines.html",
        "term": "Fall 2027",
        "type": "filing_open",
      },
      {
        "confidence": "HIGH",
        "date": "2026-11-30",
        "daysUntil": 78,
        "deadlineId": "fall-2027-application-2026-11-30",
        "requirementId": "uc-berkeley-data-science-ba#deadline:fall-2027-application-2026-11-30",
        "sourceUrl": "https://admission.universityofcalifornia.edu/how-to-apply/applying-as-a-transfer/dates-and-deadlines.html",
        "term": "Fall 2027",
        "type": "application",
      },
      {
        "confidence": "HIGH",
        "date": "2027-01-31",
        "daysUntil": 140,
        "deadlineId": "fall-2027-docs-2027-01-31",
        "requirementId": "uc-berkeley-data-science-ba#deadline:fall-2027-docs-2027-01-31",
        "sourceUrl": "https://admission.universityofcalifornia.edu/how-to-apply/applying-as-a-transfer/dates-and-deadlines.html",
        "term": "Fall 2027",
        "type": "docs",
      },
      {
        "confidence": "HIGH",
        "date": "2027-07-01",
        "daysUntil": 291,
        "deadlineId": "fall-2027-docs-2027-07-01",
        "requirementId": "uc-berkeley-data-science-ba#deadline:fall-2027-docs-2027-07-01",
        "sourceUrl": "https://admission.universityofcalifornia.edu/how-to-apply/applying-as-a-transfer/dates-and-deadlines.html",
        "term": "Fall 2027",
        "type": "docs",
      },
    ],
    "asOf": "2026-09-13",
    "deadline": {
      "confidence": "HIGH",
      "date": "2026-11-30",
      "daysUntil": 78,
      "deadlineId": "fall-2027-application-2026-11-30",
      "requirementId": "uc-berkeley-data-science-ba#deadline:fall-2027-application-2026-11-30",
      "sourceUrl": "https://admission.universityofcalifornia.edu/how-to-apply/applying-as-a-transfer/dates-and-deadlines.html",
      "status": "upcoming",
      "term": "Fall 2027",
      "termMatched": true,
      "type": "application",
    },
    "essays": {
      "optional": [
        {
          "charLimit": null,
          "confidence": "MEDIUM",
          "essayId": "uc-piq-1-leadership",
          "prompt": "Describe an example of your leadership experience in which you have positively influenced others, helped resolve disputes, or contributed to group efforts over time.",
          "promptPublished": true,
          "required": false,
          "requirementId": "uc-berkeley-data-science-ba#essay:uc-piq-1-leadership",
          "sourceUrl": "https://admission.universityofcalifornia.edu/how-to-apply/applying-as-a-transfer/personal-insight-questions.html",
          "wordLimit": 350,
        },
        {
          "charLimit": null,
          "confidence": "MEDIUM",
          "essayId": "uc-piq-2-creative",
          "prompt": "Every person has a creative side, and it can be expressed in many ways: problem solving, original and innovative thinking, and artistically, to name a few. Describe how you express your creative side.",
          "promptPublished": true,
          "required": false,
          "requirementId": "uc-berkeley-data-science-ba#essay:uc-piq-2-creative",
          "sourceUrl": "https://admission.universityofcalifornia.edu/how-to-apply/applying-as-a-transfer/personal-insight-questions.html",
          "wordLimit": 350,
        },
        {
          "charLimit": null,
          "confidence": "MEDIUM",
          "essayId": "uc-piq-3-talent",
          "prompt": "What would you say is your greatest talent or skill? How have you developed and demonstrated that talent over time?",
          "promptPublished": true,
          "required": false,
          "requirementId": "uc-berkeley-data-science-ba#essay:uc-piq-3-talent",
          "sourceUrl": "https://admission.universityofcalifornia.edu/how-to-apply/applying-as-a-transfer/personal-insight-questions.html",
          "wordLimit": 350,
        },
        {
          "charLimit": null,
          "confidence": "MEDIUM",
          "essayId": "uc-piq-4-educational",
          "prompt": "Describe how you have taken advantage of a significant educational opportunity or worked to overcome an educational barrier you have faced.",
          "promptPublished": true,
          "required": false,
          "requirementId": "uc-berkeley-data-science-ba#essay:uc-piq-4-educational",
          "sourceUrl": "https://admission.universityofcalifornia.edu/how-to-apply/applying-as-a-transfer/personal-insight-questions.html",
          "wordLimit": 350,
        },
        {
          "charLimit": null,
          "confidence": "MEDIUM",
          "essayId": "uc-piq-5-challenge",
          "prompt": "Describe the most significant challenge you have faced and the steps you have taken to overcome this challenge. How has this challenge affected your academic achievement?",
          "promptPublished": true,
          "required": false,
          "requirementId": "uc-berkeley-data-science-ba#essay:uc-piq-5-challenge",
          "sourceUrl": "https://admission.universityofcalifornia.edu/how-to-apply/applying-as-a-transfer/personal-insight-questions.html",
          "wordLimit": 350,
        },
        {
          "charLimit": null,
          "confidence": "MEDIUM",
          "essayId": "uc-piq-6-community",
          "prompt": "What have you done to make your school or your community a better place?",
          "promptPublished": true,
          "required": false,
          "requirementId": "uc-berkeley-data-science-ba#essay:uc-piq-6-community",
          "sourceUrl": "https://admission.universityofcalifornia.edu/how-to-apply/applying-as-a-transfer/personal-insight-questions.html",
          "wordLimit": 350,
        },
        {
          "charLimit": null,
          "confidence": "MEDIUM",
          "essayId": "uc-piq-7-beyond",
          "prompt": "Beyond what has already been shared in your application, what do you believe makes you a strong candidate for admissions to the University of California?",
          "promptPublished": true,
          "required": false,
          "requirementId": "uc-berkeley-data-science-ba#essay:uc-piq-7-beyond",
          "sourceUrl": "https://admission.universityofcalifornia.edu/how-to-apply/applying-as-a-transfer/personal-insight-questions.html",
          "wordLimit": 350,
        },
      ],
      "optionalCount": 7,
      "required": [
        {
          "charLimit": null,
          "confidence": "MEDIUM",
          "essayId": "uc-piq-required",
          "prompt": "Please describe how you have prepared for your intended major, including your readiness to succeed in your upper-division courses once you enroll at the university.",
          "promptPublished": true,
          "required": true,
          "requirementId": "uc-berkeley-data-science-ba#essay:uc-piq-required",
          "sourceUrl": "https://admission.universityofcalifornia.edu/how-to-apply/applying-as-a-transfer/personal-insight-questions.html",
          "wordLimit": 350,
        },
      ],
      "requiredCount": 1,
    },
    "gePattern": {
      "confidence": "HIGH",
      "requirementId": "uc-berkeley-data-science-ba#ge_pattern",
      "sourceUrl": "https://admission.universityofcalifornia.edu/admission-requirements/transfer-requirements/preparing-to-transfer/basic-requirements.html",
      "text": "UC 7-course pattern required for eligibility. Completing IGETC, Cal-GETC, or campus-specific GE may already satisfy it. Berkeley also lists a Reading & Composition requirement.",
    },
    "gpa": {
      "competitive": {
        "confidence": "MEDIUM",
        "published": false,
        "requirementId": "uc-berkeley-data-science-ba#competitive_gpa",
        "sourceUrl": "https://transfers.berkeley.edu/prospective-students/general-admission-information",
        "value": null,
      },
      "min": {
        "confidence": "HIGH",
        "published": true,
        "requirementId": "uc-berkeley-data-science-ba#min_gpa",
        "sourceUrl": "https://transfers.berkeley.edu/prospective-students/general-admission-information",
        "value": 3,
      },
      "status": "meets_minimum",
      "student": 3.3,
    },
    "hasTransferProgram": {
      "confidence": "MEDIUM",
      "requirementId": "uc-berkeley-data-science-ba#has_transfer_program",
      "sourceUrl": "https://admission.universityofcalifornia.edu/how-to-apply/applying-as-a-transfer/dates-and-deadlines.html",
      "value": true,
    },
    "isFictional": false,
    "prereqs": [
      {
        "confidence": "MEDIUM",
        "courseId": "calc-1",
        "matchedCourses": [
          "MATH 1A",
        ],
        "name": "Calculus I",
        "pendingCompletion": false,
        "plannedCourses": [],
        "possibleEquivalents": [],
        "requirementId": "uc-berkeley-data-science-ba#course:calc-1",
        "sourceUrl": "https://cdss.berkeley.edu/dsus/academics/requirements-lower-division",
        "status": "met",
      },
      {
        "confidence": "MEDIUM",
        "courseId": "calc-2",
        "matchedCourses": [
          "MATH 1B",
        ],
        "name": "Calculus II",
        "pendingCompletion": true,
        "plannedCourses": [],
        "possibleEquivalents": [],
        "requirementId": "uc-berkeley-data-science-ba#course:calc-2",
        "sourceUrl": "https://cdss.berkeley.edu/dsus/academics/requirements-lower-division",
        "status": "met",
      },
      {
        "confidence": "MEDIUM",
        "courseId": "data-c8",
        "matchedCourses": [],
        "name": "Foundations of Data Science (Data C8)",
        "pendingCompletion": false,
        "plannedCourses": [],
        "possibleEquivalents": [
          "MATH 10",
        ],
        "requirementId": "uc-berkeley-data-science-ba#course:data-c8",
        "sourceUrl": "https://cdss.berkeley.edu/dsus/academics/requirements-lower-division",
        "status": "unknown-equivalency",
      },
      {
        "confidence": "MEDIUM",
        "courseId": "intro-programming",
        "matchedCourses": [
          "CIS 22A",
        ],
        "name": "Programming: CS 61A or CS/Data C88C, or Engin 7",
        "pendingCompletion": false,
        "plannedCourses": [],
        "possibleEquivalents": [],
        "requirementId": "uc-berkeley-data-science-ba#course:intro-programming",
        "sourceUrl": "https://cdss.berkeley.edu/dsus/academics/requirements-lower-division",
        "status": "met",
      },
      {
        "confidence": "MEDIUM",
        "courseId": "linear-algebra",
        "matchedCourses": [],
        "name": "Linear Algebra (Math 54 or equivalent)",
        "pendingCompletion": false,
        "plannedCourses": [],
        "possibleEquivalents": [],
        "requirementId": "uc-berkeley-data-science-ba#course:linear-algebra",
        "sourceUrl": "https://cdss.berkeley.edu/dsus/academics/requirements-lower-division",
        "status": "missing",
      },
      {
        "confidence": "MEDIUM",
        "courseId": "data-structures",
        "matchedCourses": [],
        "name": "Data Structures (CS 61B or 61BL)",
        "pendingCompletion": false,
        "plannedCourses": [],
        "possibleEquivalents": [],
        "requirementId": "uc-berkeley-data-science-ba#course:data-structures",
        "sourceUrl": "https://cdss.berkeley.edu/dsus/academics/requirements-lower-division",
        "status": "missing",
      },
      {
        "confidence": "MEDIUM",
        "courseId": "domain-emphasis",
        "matchedCourses": [],
        "name": "Domain Emphasis lower-division course",
        "pendingCompletion": false,
        "plannedCourses": [],
        "possibleEquivalents": [],
        "requirementId": "uc-berkeley-data-science-ba#course:domain-emphasis",
        "sourceUrl": "https://cdss.berkeley.edu/dsus/academics/requirements-lower-division",
        "status": "missing",
      },
      {
        "confidence": "MEDIUM",
        "courseId": "uc-7-course-pattern",
        "matchedCourses": [],
        "name": "UC 7-course pattern",
        "pendingCompletion": false,
        "plannedCourses": [],
        "possibleEquivalents": [],
        "requirementId": "uc-berkeley-data-science-ba#course:uc-7-course-pattern",
        "sourceUrl": "https://cdss.berkeley.edu/dsus/academics/requirements-lower-division",
        "status": "missing",
      },
    ],
    "profileId": "demo-quarter",
    "programId": "uc-berkeley-data-science-ba",
    "programName": "Data Science BA (College of Computing, Data Science, and Society)",
    "recs": {
      "confidence": "MEDIUM",
      "required": 0,
      "requirementId": "uc-berkeley-data-science-ba#recs_required",
      "sourceUrl": "https://admission.universityofcalifornia.edu/admission-requirements/transfer-requirements/preparing-to-transfer/basic-requirements.html",
    },
    "schoolId": "uc-berkeley",
    "schoolName": "University of California, Berkeley",
    "summary": {
      "blockers": 0,
      "info": 0,
      "met": 3,
      "missing": 4,
      "unknownEquivalency": 1,
      "warnings": 0,
    },
    "targetTerm": "Fall 2027",
    "units": {
      "completedInRequiredSystem": 46.67,
      "confidence": "HIGH",
      "converted": true,
      "projectedInRequiredSystem": 60,
      "requiredMin": 60,
      "requiredSystem": "semester",
      "requirementId": "uc-berkeley-data-science-ba#units",
      "shortfall": 0,
      "sourceUrl": "https://transfers.berkeley.edu/prospective-students/general-admission-information",
      "status": "met_with_in_progress",
      "studentCompleted": 70,
      "studentInProgress": 20,
      "studentSystem": "quarter",
    },
    "warnings": [],
  },
  {
    "aiPolicy": {
      "confidence": "HIGH",
      "mode": "grammar_only",
      "requirementId": "cornell-as-economics#ai_policy",
      "sourceUrl": "https://admissions.cornell.edu/policies/receiving-help-with-your-application",
    },
    "allDeadlines": [
      {
        "confidence": "HIGH",
        "date": "2027-03-15",
        "daysUntil": 183,
        "deadlineId": "fall-2027-application-2027-03-15",
        "requirementId": "cornell-as-economics#deadline:fall-2027-application-2027-03-15",
        "sourceUrl": "https://admissions.cornell.edu/how-to-apply/transfer-applicants",
        "term": "Fall 2027",
        "type": "application",
      },
      {
        "confidence": "HIGH",
        "date": "2027-04-15",
        "daysUntil": 214,
        "deadlineId": "fall-2027-docs-2027-04-15",
        "requirementId": "cornell-as-economics#deadline:fall-2027-docs-2027-04-15",
        "sourceUrl": "https://admissions.cornell.edu/how-to-apply/transfer-applicants",
        "term": "Fall 2027",
        "type": "docs",
      },
    ],
    "asOf": "2026-09-13",
    "deadline": {
      "confidence": "HIGH",
      "date": "2027-03-15",
      "daysUntil": 183,
      "deadlineId": "fall-2027-application-2027-03-15",
      "requirementId": "cornell-as-economics#deadline:fall-2027-application-2027-03-15",
      "sourceUrl": "https://admissions.cornell.edu/how-to-apply/transfer-applicants",
      "status": "upcoming",
      "term": "Fall 2027",
      "termMatched": true,
      "type": "application",
    },
    "essays": {
      "optional": [],
      "optionalCount": 0,
      "required": [
        {
          "charLimit": null,
          "confidence": "HIGH",
          "essayId": "cornell-transfer-statement",
          "prompt": "How does continuing your education at a new institution help you achieve your future goals?",
          "promptPublished": true,
          "required": true,
          "requirementId": "cornell-as-economics#essay:cornell-transfer-statement",
          "sourceUrl": "https://admissions.cornell.edu/how-to-apply/transfer-applicants",
          "wordLimit": 650,
        },
        {
          "charLimit": null,
          "confidence": "LOW",
          "essayId": "as-college-supplement",
          "prompt": null,
          "promptPublished": false,
          "required": true,
          "requirementId": "cornell-as-economics#essay:as-college-supplement",
          "sourceUrl": "https://admissions.cornell.edu/how-to-apply/transfer-applicants",
          "wordLimit": null,
        },
      ],
      "requiredCount": 2,
    },
    "gePattern": {
      "confidence": "MEDIUM",
      "requirementId": "cornell-as-economics#ge_pattern",
      "sourceUrl": "https://economics.cornell.edu/major",
      "text": null,
    },
    "gpa": {
      "competitive": {
        "confidence": "MEDIUM",
        "published": true,
        "requirementId": "cornell-as-economics#competitive_gpa",
        "sourceUrl": "https://as.cornell.edu/admissions/admissions-requirements-and-process",
        "value": 3.5,
      },
      "min": {
        "confidence": "MEDIUM",
        "published": false,
        "requirementId": "cornell-as-economics#min_gpa",
        "sourceUrl": "https://as.cornell.edu/admissions/admissions-requirements-and-process",
        "value": null,
      },
      "status": "below_competitive",
      "student": 3.3,
    },
    "hasTransferProgram": {
      "confidence": "MEDIUM",
      "requirementId": "cornell-as-economics#has_transfer_program",
      "sourceUrl": "https://admissions.cornell.edu/how-to-apply/transfer-applicants",
      "value": true,
    },
    "isFictional": false,
    "prereqs": [
      {
        "confidence": "HIGH",
        "courseId": "econ-1110",
        "matchedCourses": [
          "ECON 1",
        ],
        "name": "Introductory Microeconomics (ECON 1110 or equivalent)",
        "pendingCompletion": false,
        "plannedCourses": [],
        "possibleEquivalents": [],
        "requirementId": "cornell-as-economics#course:econ-1110",
        "sourceUrl": "https://economics.cornell.edu/major",
        "status": "met",
      },
      {
        "confidence": "HIGH",
        "courseId": "econ-1120",
        "matchedCourses": [],
        "name": "Introductory Macroeconomics (ECON 1120 or equivalent)",
        "pendingCompletion": false,
        "plannedCourses": [],
        "possibleEquivalents": [],
        "requirementId": "cornell-as-economics#course:econ-1120",
        "sourceUrl": "https://economics.cornell.edu/major",
        "status": "missing",
      },
      {
        "confidence": "HIGH",
        "courseId": "math-1110",
        "matchedCourses": [
          "MATH 1A",
        ],
        "name": "Calculus I (MATH 1110 or equivalent)",
        "pendingCompletion": false,
        "plannedCourses": [],
        "possibleEquivalents": [],
        "requirementId": "cornell-as-economics#course:math-1110",
        "sourceUrl": "https://economics.cornell.edu/major",
        "status": "met",
      },
      {
        "confidence": "HIGH",
        "courseId": "as-writing-intensive",
        "matchedCourses": [],
        "name": "Writing-intensive composition course",
        "pendingCompletion": false,
        "plannedCourses": [],
        "possibleEquivalents": [
          "EWRT 1A",
        ],
        "requirementId": "cornell-as-economics#course:as-writing-intensive",
        "sourceUrl": "https://economics.cornell.edu/major",
        "status": "unknown-equivalency",
      },
    ],
    "profileId": "demo-quarter",
    "programId": "cornell-as-economics",
    "programName": "College of Arts & Sciences - Economics",
    "recs": {
      "confidence": "HIGH",
      "required": 1,
      "requirementId": "cornell-as-economics#recs_required",
      "sourceUrl": "https://admissions.cornell.edu/how-to-apply/transfer-applicants",
    },
    "schoolId": "cornell",
    "schoolName": "Cornell University",
    "summary": {
      "blockers": 0,
      "info": 0,
      "met": 2,
      "missing": 1,
      "unknownEquivalency": 1,
      "warnings": 0,
    },
    "targetTerm": "Fall 2027",
    "units": {
      "completedInRequiredSystem": 46.67,
      "confidence": "HIGH",
      "converted": true,
      "projectedInRequiredSystem": 60,
      "requiredMin": 12,
      "requiredSystem": "semester",
      "requirementId": "cornell-as-economics#units",
      "shortfall": 0,
      "sourceUrl": "https://admissions.cornell.edu/how-to-apply/transfer-applicants",
      "status": "met",
      "studentCompleted": 70,
      "studentInProgress": 20,
      "studentSystem": "quarter",
    },
    "warnings": [],
  },
  {
    "aiPolicy": {
      "confidence": "HIGH",
      "mode": "brainstorm_ok",
      "requirementId": "umich-lsa#ai_policy",
      "sourceUrl": "https://admissions.umich.edu/apply/transfer-applicants/essay-questions",
    },
    "allDeadlines": [
      {
        "confidence": "HIGH",
        "date": "2026-10-01",
        "daysUntil": 18,
        "deadlineId": "winter-2027-application-2026-10-01",
        "requirementId": "umich-lsa#deadline:winter-2027-application-2026-10-01",
        "sourceUrl": "https://lsa.umich.edu/transfer/prospective-students/apply.html",
        "term": "Winter 2027",
        "type": "application",
      },
      {
        "confidence": "HIGH",
        "date": "2027-02-01",
        "daysUntil": 141,
        "deadlineId": "fall-2027-application-2027-02-01",
        "requirementId": "umich-lsa#deadline:fall-2027-application-2027-02-01",
        "sourceUrl": "https://lsa.umich.edu/transfer/prospective-students/apply.html",
        "term": "Fall 2027",
        "type": "application",
      },
    ],
    "asOf": "2026-09-13",
    "deadline": {
      "confidence": "HIGH",
      "date": "2027-02-01",
      "daysUntil": 141,
      "deadlineId": "fall-2027-application-2027-02-01",
      "requirementId": "umich-lsa#deadline:fall-2027-application-2027-02-01",
      "sourceUrl": "https://lsa.umich.edu/transfer/prospective-students/apply.html",
      "status": "upcoming",
      "term": "Fall 2027",
      "termMatched": true,
      "type": "application",
    },
    "essays": {
      "optional": [
        {
          "charLimit": null,
          "confidence": "MEDIUM",
          "essayId": "commonapp-challenges",
          "prompt": "Common App challenges and circumstances question (optional).",
          "promptPublished": true,
          "required": false,
          "requirementId": "umich-lsa#essay:commonapp-challenges",
          "sourceUrl": "https://admissions.umich.edu/apply/transfer-applicants/essay-questions",
          "wordLimit": 250,
        },
      ],
      "optionalCount": 1,
      "required": [
        {
          "charLimit": null,
          "confidence": "MEDIUM",
          "essayId": "commonapp-personal-essay",
          "prompt": "Common App personal essay (choose one Common App prompt).",
          "promptPublished": true,
          "required": true,
          "requirementId": "umich-lsa#essay:commonapp-personal-essay",
          "sourceUrl": "https://admissions.umich.edu/apply/transfer-applicants/essay-questions",
          "wordLimit": 650,
        },
        {
          "charLimit": 1500,
          "confidence": "MEDIUM",
          "essayId": "um-leaders-citizens",
          "prompt": "At the University of Michigan, we are focused on developing leaders and citizens who will challenge the present and enrich the future. In your essay, share with us how you are prepared to contribute to these goals. This could include the people, places, experiences, or aspirations that have shaped your journey and future plans. (1,500 characters maximum.)",
          "promptPublished": true,
          "required": true,
          "requirementId": "umich-lsa#essay:um-leaders-citizens",
          "sourceUrl": "https://admissions.umich.edu/apply/transfer-applicants/essay-questions",
          "wordLimit": null,
        },
        {
          "charLimit": 2750,
          "confidence": "MEDIUM",
          "essayId": "um-college-fit",
          "prompt": "Describe the unique qualities that attract you to the specific undergraduate college or school (including preferred admission and dual degree programs) to which you are applying at the University of Michigan. How would that curriculum support your interests? (2,750 characters maximum.)",
          "promptPublished": true,
          "required": true,
          "requirementId": "umich-lsa#essay:um-college-fit",
          "sourceUrl": "https://admissions.umich.edu/apply/transfer-applicants/essay-questions",
          "wordLimit": null,
        },
        {
          "charLimit": 1500,
          "confidence": "MEDIUM",
          "essayId": "um-transfer-reasons",
          "prompt": "Please provide a statement that addresses your reasons for transferring and the objectives you hope to achieve. (1,500 characters maximum.)",
          "promptPublished": true,
          "required": true,
          "requirementId": "umich-lsa#essay:um-transfer-reasons",
          "sourceUrl": "https://admissions.umich.edu/apply/transfer-applicants/essay-questions",
          "wordLimit": null,
        },
      ],
      "requiredCount": 4,
    },
    "gePattern": {
      "confidence": "MEDIUM",
      "requirementId": "umich-lsa#ge_pattern",
      "sourceUrl": "https://admissions.umich.edu/apply/transfer-applicants/requirements-deadlines",
      "text": null,
    },
    "gpa": {
      "competitive": {
        "confidence": "MEDIUM",
        "published": false,
        "requirementId": "umich-lsa#competitive_gpa",
        "sourceUrl": "https://admissions.umich.edu/apply/transfer-applicants/requirements-deadlines",
        "value": null,
      },
      "min": {
        "confidence": "HIGH",
        "published": false,
        "requirementId": "umich-lsa#min_gpa",
        "sourceUrl": "https://admissions.umich.edu/apply/transfer-applicants/requirements-deadlines",
        "value": null,
      },
      "status": "not_published",
      "student": 3.3,
    },
    "hasTransferProgram": {
      "confidence": "MEDIUM",
      "requirementId": "umich-lsa#has_transfer_program",
      "sourceUrl": "https://lsa.umich.edu/transfer/prospective-students/apply.html",
      "value": true,
    },
    "isFictional": false,
    "prereqs": [],
    "profileId": "demo-quarter",
    "programId": "umich-lsa",
    "programName": "College of Literature, Science, and the Arts (LSA)",
    "recs": {
      "confidence": "HIGH",
      "required": 0,
      "requirementId": "umich-lsa#recs_required",
      "sourceUrl": "https://lsa.umich.edu/transfer/prospective-students/apply.html",
    },
    "schoolId": "umich",
    "schoolName": "University of Michigan - Ann Arbor",
    "summary": {
      "blockers": 0,
      "info": 0,
      "met": 0,
      "missing": 0,
      "unknownEquivalency": 0,
      "warnings": 0,
    },
    "targetTerm": "Fall 2027",
    "units": {
      "completedInRequiredSystem": 46.67,
      "confidence": "HIGH",
      "converted": true,
      "projectedInRequiredSystem": 60,
      "requiredMin": null,
      "requiredSystem": "semester",
      "requirementId": "umich-lsa#units",
      "shortfall": null,
      "sourceUrl": "https://admissions.umich.edu/apply/transfer-applicants/requirements-deadlines",
      "status": "not_published",
      "studentCompleted": 70,
      "studentInProgress": 20,
      "studentSystem": "quarter",
    },
    "warnings": [],
  },
  {
    "aiPolicy": {
      "confidence": "LOW",
      "mode": "unknown",
      "requirementId": "northfield-fictional-cs#ai_policy",
      "sourceUrl": "about:fictional",
    },
    "allDeadlines": [],
    "asOf": "2026-09-13",
    "deadline": null,
    "essays": {
      "optional": [],
      "optionalCount": 0,
      "required": [],
      "requiredCount": 0,
    },
    "gePattern": {
      "confidence": "LOW",
      "requirementId": "northfield-fictional-cs#ge_pattern",
      "sourceUrl": "about:fictional",
      "text": null,
    },
    "gpa": {
      "competitive": {
        "confidence": "LOW",
        "published": false,
        "requirementId": "northfield-fictional-cs#competitive_gpa",
        "sourceUrl": "about:fictional",
        "value": null,
      },
      "min": {
        "confidence": "LOW",
        "published": false,
        "requirementId": "northfield-fictional-cs#min_gpa",
        "sourceUrl": "about:fictional",
        "value": null,
      },
      "status": "not_published",
      "student": 3.3,
    },
    "hasTransferProgram": {
      "confidence": "LOW",
      "requirementId": "northfield-fictional-cs#has_transfer_program",
      "sourceUrl": "about:fictional",
      "value": false,
    },
    "isFictional": true,
    "prereqs": [],
    "profileId": "demo-quarter",
    "programId": "northfield-fictional-cs",
    "programName": "Computer Science (FICTIONAL)",
    "recs": {
      "confidence": "LOW",
      "required": 0,
      "requirementId": "northfield-fictional-cs#recs_required",
      "sourceUrl": "about:fictional",
    },
    "schoolId": "northfield-fictional",
    "schoolName": "Northfield Institute of Technology (FICTIONAL)",
    "summary": {
      "blockers": 0,
      "info": 0,
      "met": 0,
      "missing": 0,
      "unknownEquivalency": 0,
      "warnings": 0,
    },
    "targetTerm": "Fall 2027",
    "units": {
      "completedInRequiredSystem": 46.67,
      "confidence": "LOW",
      "converted": true,
      "projectedInRequiredSystem": 60,
      "requiredMin": null,
      "requiredSystem": "semester",
      "requirementId": "northfield-fictional-cs#units",
      "shortfall": null,
      "sourceUrl": "about:fictional",
      "status": "not_published",
      "studentCompleted": 70,
      "studentInProgress": 20,
      "studentSystem": "quarter",
    },
    "warnings": [],
  },
]
`;
